test/langtools/tools/javac/patterns/withers/SourceLevelCheck.out
SourceLevelCheck.java:10:15: compiler.err.preview.feature.disabled: (compiler.misc.feature.derived.instance)
1 error
